# BSUIR-labs

./: README.md
3 term/assembly/: full_1_laba(exe).asm  lab2.asm
3 term/assembly/lab3/: lab3.asm
3 term/assembly/lab4/: lab4.asm
3 term/assembly/lab5/: INPUT.txt  mycode2.asm
3 term/assembly/lab6/: full_6_laba.sln
3 term/cpp/courseWorkConsoleCheckers/: CMakeLists.txt
3 term/cpp/dop_3_laba/: CMakeLists.txt  main.cpp
3 term/cpp/full_1-2_laba/: Cell.cpp  Cell.h  HashTable.h
3 term/cpp/full_3-4_laba/: SecondaryFunctions.cpp  SecondaryFunctions.h  main.cpp
3 term/cpp/full_3_laba/: CMakeLists.txt  CurrentTime.cpp  CurrentTime.h  Event.cpp  Event.h  Menu.cpp  Menu.h  main.cpp
3 term/cpp/lab1-2/: HashTable.cpp  Menu.cpp  Menu.h  main.cpp
3 term/cpp/lab3-4/: Event.h
term3/assembly/: README.md
term3/assembly/lab4/: lab4.asm
term3/assembly/lab5/: input.txt  lab5.asm
term3/assembly/lab7/: lab7.asm
term3/assembly/lab8/: lab8.asm
term3/cpp/CheckersVS/: CheckersVS.sln
term3/cpp/lab5/: List.h  (+4 more)
term4/apk/: lab1.docx  lab2.docx  lab3.docx  lab4.docx  lab5.docx  lab6.docx  ~$lab3.docx
term4/shemt/: ЛР1_250502_Потейчук.docx  ЛР2_250502_Потейчук.docx
term5/iiuvm/: Лабораторная_работа№1_темы_защиты.docx
term5/iiuvm/lab1/lab1CLion/: Battery.cpp  CMakeLists.txt  MyBatteryInformation.cpp  MyBatteryInformation.h  MySleepHibernateMode.cpp
term5/kidsvt/: lab1.xlsx  ~$lab1.xlsx
term5/pms/: lab1.docx  lab4.docx  ~$lab1.docx  ЛР1_Аналог_Pinterest.docx  ЛР2_Аналог_Pinterest.docx  ЛР3_Аналог_Pinterest.docx  ЛР4_Аналог_Pinterest.docx  ЛР5_Аналог_Pinterest.docx
(+349 files in other folders)
